# Sentinel-Fin

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: main.yml
data/compliance/: regulations.txt
rust_engine/: Cargo.toml  pyproject.toml
rust_engine/src/: lib.rs
src/: constants.py
src/api/: main.py
src/compliance_rag/: reporter.py
src/database/: connection.py  models.py  redis_client.py
src/engine/: generator.py  loader.py
src/frontend/: dashboard.py
src/ml/: preprocessor.py  train.py
tests/: test_api.py  test_model.py
