[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_engine"
crate-type = ["cdylib"]

[dependencies]
# extension-module is critical—it tells Rust it's a Python plugin
pyo3 = { version = "0.20.2", features = ["extension-module"] }
pyo3-polars = { version = "0.10", features = ["derive"] }
polars = { version = "0.36.2", default-features = false, features = [
    "dtype-slim", 
    "strings",
    "fmt", 
    "lazy"
] }
serde = { version = "1.0", features = ["derive"] }

hashbrown = "0.14.3"


[patch.crates-io]
hashbrown = { git = "https://github.com/rust-lang/hashbrown", tag = "v0.14.3" }